--- a/client/index.html
+++ b/client/index.html
@@ -32,13 +32,17 @@
     <div ui-view></div>
   </div>
 
-  <script src="js/services/authen.js"></script>
   <script src="vendor/jquery/dist/jquery.js"></script>
   <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
   <script src="vendor/angular/angular.js"></script>
   <script src="vendor/angular-resource/angular-resource.js"></script>
   <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+
+  <script src="js/config.js"></script>  
   <script src="js/app.js"></script>
+  
+  <script src="js/services/authen.js"></script>
+  <script src="js/services/localStorage.js"></script>
   <script src="js/controllers/login.js"></script>
 </body>
 
