--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 
   <!-- Bootstrap -->
   <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="views/student/css/styles.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,6 +27,7 @@
       </div>
     </div>
   </div>
+  <base href="/">
 
   <div class="container">
     <div ui-view></div>
@@ -38,9 +39,9 @@
   <script src="vendor/angular-resource/angular-resource.js"></script>
   <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 
-  <script src="js/config.js"></script>  
+  <script src="js/config.js"></script>
   <script src="js/app.js"></script>
-  
+
   <script src="js/services/authen.js"></script>
   <script src="js/services/localStorage.js"></script>
   <script src="js/controllers/login.js"></script>
