--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>LoopBack Angular example</title>
+  <title>BKConnect </title>
 
   <!-- Bootstrap -->
-  <link href="vendor/bootstrap/dist/css/bootstrap.css">
-  <link href="views/styles.css">
-  <link href="vendor/bootstrap/dist/css/bootstrap.min.css" />
-  <link href="vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
-
+  <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+  <link href="views/styles.css" rel="stylesheet"/>
+  <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+  
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,8 +32,9 @@
   <base href="/">
 
   <div class="container">
-    <div ui-view></div>
+    <div ui-view class="view"></div>
   </div>
+  
   <script src="vendor/sweetaleart/sweetalert.min.js"></script>
   <script src="vendor/jquery/dist/jquery.js"></script>
   <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
