--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,10 @@
   <title>BKConnect </title>
 
   <!-- Bootstrap -->
-  <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-  <link href="views/styles.css" rel="stylesheet"/>
+  <!-- <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+  <link href="views/styles.css" rel="stylesheet" />
   <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-  
+ -->
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,19 +22,19 @@
 </head>
 
 <body ng-app="app">
-  <div class="navbar navbar-inverse navbar-fixed-top" id="test" role="navigation">
+  <!-- <div class="navbar navbar-inverse navbar-fixed-top" id="test" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/home">BKConnect - Cơ hội tuyển dụng</a>
       </div>
     </div>
-  </div>
+  </div> -->
   <base href="/">
 
-  <div class="container">
-    <div ui-view class="view"></div>
-  </div>
-  
+
+  <div ui-view class="view"></div>
+
+
   <script src="vendor/sweetaleart/sweetalert.min.js"></script>
   <script src="vendor/jquery/dist/jquery.js"></script>
   <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
