--- a/client/index.html
+++ b/client/index.html
@@ -22,13 +22,13 @@
 </head>
 
 <body ng-app="app">
-  <div class="navbar navbar-inverse navbar-fixed-top" id="test" role="navigation">
+  <!-- <div class="navbar navbar-inverse navbar-fixed-top" id="test" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/home">BKConnect - Cơ hội tuyển dụng</a>
       </div>
     </div>
-  </div>
+  </div> -->
   <base href="/">
   <div ui-view class="view"></div>
 
