--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
   <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
   <script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="views/admin/vendor/angular-datatables.min.js"></script>
   
 
   <script src="js/config.js"></script>
