--- a/client/company/index.html
+++ b/client/company/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <!-- META SECTION -->
-    <title>Joli Admin - Responsive Bootstrap Admin Template</title>
+    <title>Quản trị công ty</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <!-- END META SECTION -->
 
     <!-- CSS INCLUDE -->
     <link rel="stylesheet" type="text/css" id="theme" href="company/views/css/theme-default.css" />
-    <!-- EOF CSS INCLUDE -->
     <link rel="stylesheet" type="text/css" href="vendor/ng-tags-input/ng-tags-input.css" />
+    <!-- EOF CSS INCLUDE -->
 
 
+    
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <div class="page-container">
 
         <!-- START PAGE SIDEBAR -->
-        <div class="page-sidebar">
+        <div class="page-sidebar" ng-if="location.path() !== '/login'">
             <!-- START X-NAVIGATION -->
             <ul class="x-navigation">
                 <li class="xn-logo">
@@ -91,14 +91,19 @@
 
                     </ul>
                 </li>
+                <li class="">
+                    <a href="#editprofile">
+                        <span class="fa fa-desktop"></span>
+                        <span class="xn-text">Cập nhật thông tin </span>
+                    </a>
+                </li>
             </ul>
             <!-- END X-NAVIGATION -->
         </div>
         <!-- END PAGE SIDEBAR -->
 
         <!-- PAGE CONTENT -->
-        <div class="page-content">
-
+        <div class="page-content" ng-if="location.path() !== '/login'">
             <!-- START X-NAVIGATION VERTICAL -->
             <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
                 <!-- TOGGLE NAVIGATION -->
@@ -224,13 +229,14 @@
                 <!-- END TASKS -->
             </ul>
             <!-- END X-NAVIGATION VERTICAL -->
-
             <!-- PAGE CONTENT WRAPPER -->
-            <!-- END PAGE CONTENT WRAPPER -->
-            <base href="/company">
             <ng-view id="main"></ng-view>
+            <!-- END PAGE CONTENT WRAPPER -->
         </div>
+        <base href="/company">
         <!-- END PAGE CONTENT -->
+        <ng-view id="main" ng-if="location.path() == '/login'"></ng-view>
+        
     </div>
     <!-- END PAGE CONTAINER -->
 
@@ -257,8 +263,8 @@
     <!-- END MESSAGE BOX-->
 
     <!-- START PRELOADS -->
-    <audio id="audio-alert" src="audio/alert.mp3" preload="auto"></audio>
-    <audio id="audio-fail" src="audio/fail.mp3" preload="auto"></audio>
+    <!-- <audio id="audio-alert" src="audio/alert.mp3" preload="auto"></audio>
+    <audio id="audio-fail" src="audio/fail.mp3" preload="auto"></audio> -->
     <!-- END PRELOADS -->
 
     <!-- START SCRIPTS -->
@@ -271,12 +277,17 @@
     <script type='text/javascript' src="vendor/angular-resource/angular-resource.js"></script>
     <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <!-- END PLUGINS -->
-    <!-- App -->
+    <!-- APP -->
     <script src="company/app.js"></script>
+    <script src="js/config.js"></script>    
     <script src="company/controllers/post.js"></script>
     <script src="company/controllers/postmanager.js"></script>
-    <script src="js/services/postService.js"></script>
-    <script src="js/config.js"></script>
+    <script src="company/controllers/editpost.js"></script>
+    <script src="company/controllers/login.js"></script>
+
+    <script src="company/services/authen.js"></script>
+    <script src="company/services/post.js"></script>
+    <script src="company/services/localStorage.js"></script>
 
     <script src="views/admin/vendor/angular-datatables.min.js"></script>
     <!-- DataTables -->
@@ -293,6 +304,8 @@
     <script type="text/javascript" src="company/views/js/summernote.min.js"></script>
     <!-- End App -->
     <!-- START THIS PAGE PLUGINS-->
+    <script src="vendor/sweetaleart/sweetalert.min.js"></script>
+
     <script type='text/javascript' src='company/views/js/plugins/icheck/icheck.min.js'></script>
     <script type="text/javascript" src="company/views/js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
     <script type="text/javascript" src="company/views/js/plugins/scrolltotop/scrolltopcontrol.js"></script>
@@ -310,10 +323,8 @@
     <script type="text/javascript" src="company/views/js/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- END THIS PAGE PLUGINS-->
 
-
-
     <!-- START TEMPLATE -->
-    <script type="text/javascript" src="company/views/js/settings.js"></script>
+    <!-- <script type="text/javascript" src="company/views/js/settings.js"></script> -->
     <script type="text/javascript" src="company/views/js/plugins.js"></script>
     <script type="text/javascript" src="company/views/js/actions.js"></script>
     <script type="text/javascript" src="company/views/js/demo_dashboard.js"></script>
