--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
   <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
   <link href="views/styles.css" rel="stylesheet" />
   <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  
 </head>
 
 <body ng-app="app">
