--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   <link href="views/styles.css" rel="stylesheet" />
   <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  
+
 </head>
 
 <body ng-app="app">
@@ -35,8 +35,10 @@
   <script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="views/admin/vendor/angular-datatables.min.js"></script>
-
-
+  <script src="vendor/angular-sanitize/angular-sanitize.js"></script>
+  <script type="text/javascript" src="vendor/ng-file-upload/ng-file-upload.min.js"></script>
+  <script type="text/javascript" src="vendor/ng-file-upload/ng-file-upload-shim.min.js"></script>
+  
   <script src="js/config.js"></script>
   <script src="js/app.js"></script>
 
