--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
   <script src="vendor/angular-sanitize/angular-sanitize.js"></script>
   <script type="text/javascript" src="vendor/ng-file-upload/ng-file-upload.min.js"></script>
   <script type="text/javascript" src="vendor/ng-file-upload/ng-file-upload-shim.min.js"></script>
-  
+
   <script src="js/config.js"></script>
   <script src="js/app.js"></script>
 
@@ -48,6 +48,7 @@
   <script src="js/services/localStorage.js"></script>
   <script src="js/services/adminService.js"></script>
   <script src="js/services/companyService.js"></script>
+  <script src="js/services/postService.js"></script>
 
   <!-- Controller -->
   <script src="js/controllers/login.js"></script>
@@ -56,6 +57,9 @@
   <script src="js/controllers/admin/reqCompany.js"></script>
   <script src="js/controllers/company/home.js"></script>
   <script src="js/controllers/company/admin.js"></script>
+  <script src="js/controllers/home/post.js"></script>
+  <script src="js/controllers/home/home.js"></script>
+  
 </body>
 
 </html>
