--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
   <script src="js/services/adminService.js"></script>
   <script src="js/services/companyService.js"></script>
   <script src="js/services/postService.js"></script>
-
+  <script src="js/services/utils.js"></script>
   <!-- Controller -->
   <script src="js/controllers/login.js"></script>
   <script src="js/controllers/student/profile.js"></script>
@@ -59,7 +59,7 @@
   <script src="js/controllers/company/admin.js"></script>
   <script src="js/controllers/home/post.js"></script>
   <script src="js/controllers/home/home.js"></script>
-  
+
 </body>
 
 </html>
