--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BKConnect </title>
   <!-- Bootstrap -->
-  <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+  <link href="./vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
   <!-- <link href="views/styles.css" rel="stylesheet" /> -->
-  <!-- <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" /> -->
+  <!-- <link href="./vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" /> -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -19,39 +19,39 @@
   <div ui-view class="view"></div>
 
   <!-- Library -->
-  <script src="vendor/sweetaleart/sweetalert.min.js"></script>
-  <script src="vendor/jquery/dist/jquery.js"></script>
-  <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="vendor/angular/angular.js"></script>
-  <script src="vendor/angular-resource/angular-resource.js"></script>
-  <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="vendor/jquery/dist/jquery.min.js"></script>
-  <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="vendor/angular-datatables.min.js"></script>
-  <script src="vendor/angular-sanitize/angular-sanitize.js"></script>
-  <script src="vendor/ng-file-upload/ng-file-upload.min.js"></script>
-  <script src="vendor/ng-file-upload/ng-file-upload-shim.min.js"></script>
+  <script src="./vendor/sweetaleart/sweetalert.min.js"></script>
+  <script src="./vendor/jquery/dist/jquery.js"></script>
+  <script src="./vendor/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="./vendor/angular/angular.js"></script>
+  <script src="./vendor/angular-resource/angular-resource.js"></script>
+  <script src="./vendor/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="./vendor/jquery/dist/jquery.min.js"></script>
+  <script src="./vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="./vendor/angular-datatables.min.js"></script>
+  <script src="./vendor/angular-sanitize/angular-sanitize.js"></script>
+  <script src="./vendor/ng-file-upload/ng-file-upload.min.js"></script>
+  <script src="./vendor/ng-file-upload/ng-file-upload-shim.min.js"></script>
 
-  <script src="js/config.js"></script>
-  <script src="js/app.js"></script>
+  <script src="./js/config.js"></script>
+  <script src="./js/app.js"></script>
 
   <!-- services  -->
-  <script src="js/services/studentService.js"></script>
-  <script src="js/services/authen.js"></script>
-  <script src="js/services/localStorage.js"></script>
-  <script src="js/services/adminService.js"></script>
-  <script src="js/services/companyService.js"></script>
-  <script src="js/services/postService.js"></script>
-  <script src="js/services/utils.js"></script>
+  <script src="./js/services/studentService.js"></script>
+  <script src="./js/services/authen.js"></script>
+  <script src="./js/services/localStorage.js"></script>
+  <script src="./js/services/adminService.js"></script>
+  <script src="./js/services/companyService.js"></script>
+  <script src="./js/services/postService.js"></script>
+  <script src="./js/services/utils.js"></script>
   <!-- Controller -->
-  <script src="js/controllers/login.js"></script>
-  <script src="js/controllers/student/profile.js"></script>
-  <script src="js/controllers/admin/listCompany.js"></script>
-  <script src="js/controllers/admin/reqCompany.js"></script>
-  <script src="js/controllers/company/home.js"></script>
-  <script src="js/controllers/company/admin.js"></script>
-  <script src="js/controllers/home/post.js"></script>
-  <script src="js/controllers/home/home.js"></script>
+  <script src="./js/controllers/login.js"></script>
+  <script src="./js/controllers/student/profile.js"></script>
+  <script src="./js/controllers/admin/listCompany.js"></script>
+  <script src="./js/controllers/admin/reqCompany.js"></script>
+  <script src="./js/controllers/company/home.js"></script>
+  <script src="./js/controllers/company/admin.js"></script>
+  <script src="./js/controllers/home/post.js"></script>
+  <script src="./js/controllers/home/home.js"></script>
 
   <script src="views/modal/cv.js"></script>
 </body>
