CV - missing report

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
 <body ng-app="app">
   <header ng-include="'views/header/index.html'"></header>
   <base href="/">
+  <div style="height: 80px"></div>
   <div ui-view class="view"></div>
 
   <!-- Library -->
