--- a/client/company/index.html
+++ b/client/company/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="vendor/ng-tags-input/ng-tags-input.min.css" />
     <!-- <link rel="stylesheet" type="text/css" href="vendor/ng-tags-input/ng-tags-input.bootstrap.min.css" /> -->
 
-     <!-- START SCRIPTS -->
+    <!-- START SCRIPTS -->
     <!-- START PLUGINS -->
     <!-- <script type="text/javascript" src="company/views/js/plugins/jquery/jquery.min.js"></script> -->
     <script type="text/javascript" src="company/views/js/jquery-2.1.4.min.js"></script>
@@ -75,20 +75,23 @@
     <script type="text/javascript" src="company/views/js/plugins/moment.min.js"></script>
     <script type="text/javascript" src="company/views/js/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- END THIS PAGE PLUGINS-->
-   
+
     <!-- START TEMPLATE -->
     <!-- <script type="text/javascript" src="company/views/js/settings.js"></script> -->
     <script type="text/javascript" src="company/views/js/plugins.js"></script>
     <script type="text/javascript" src="company/views/js/actions.js"></script>
     <script type="text/javascript" src="company/views/js/demo_dashboard.js"></script>
     <!-- EOF CSS INCLUDE -->
+    <base href="/company">
+
 </head>
 
 <body>
     <!-- START PAGE CONTAINER -->
+    <ng-view ng-show="location.path() == '/login'"></ng-view>
     <div class="page-container" ng-hide="location.path() == '/login'">
         <!-- START PAGE SIDEBAR -->
-        <div class="page-sidebar" >
+        <div class="page-sidebar" style="min-height: 678px;">
             <!-- START X-NAVIGATION -->
             <ul class="x-navigation">
                 <li class="xn-logo">
@@ -167,7 +170,7 @@
         <!-- END PAGE SIDEBAR -->
 
         <!-- PAGE CONTENT -->
-        <div class="page-content" >
+        <div class="page-content">
             <!-- START X-NAVIGATION VERTICAL -->
             <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
                 <!-- TOGGLE NAVIGATION -->
@@ -294,15 +297,13 @@
             </ul>
             <!-- END X-NAVIGATION VERTICAL -->
             <!-- PAGE CONTENT WRAPPER -->
-            <ng-view ></ng-view>
+            <ng-view></ng-view>
             <!-- <div ng-view id="main"></div> -->
             <!-- END PAGE CONTENT WRAPPER -->
         </div>
         <!-- END PAGE CONTENT -->
     </div>
     <!-- END PAGE CONTAINER -->
-    <ng-view ng-show="location.path() == '/login'"></ng-view>
-    <base href="/company">    
     <!-- MESSAGE BOX-->
     <div class="message-box animated fadeIn" data-sound="alert" id="mb-signout">
         <div class="mb-container">
@@ -330,7 +331,7 @@
     <audio id="audio-fail" src="audio/fail.mp3" preload="auto"></audio> -->
     <!-- END PRELOADS -->
 
-   
+
     <!-- END TEMPLATE -->
     <script>
         $.ajaxPrefilter(function (options, original_Options, jqXHR) {
