get post for company

--- a/client/company/index.html
+++ b/client/company/index.html
@@ -35,7 +35,10 @@
     <script src="company/controllers/editpost.js"></script>
     <script src="company/controllers/login.js"></script>
     <script src="company/controllers/editprofile.js"></script>
+    <script src="company/controllers/cvmanager.js"></script>
+    <script src="company/controllers/newcv.js"></script>
 
+    <script src="company/services/cv.js"></script>
     <script src="company/services/authen.js"></script>
     <script src="company/services/post.js"></script>
     <script src="company/services/localStorage.js"></script>
@@ -150,10 +153,10 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="layout-boxed.html">CV Mới nhận</a>
+                            <a href="#newcv">CV Mới nhận</a>
                         </li>
                         <li>
-                            <a href="layout-nav-toggled.html">Quản lý CV</a>
+                            <a href="#cvmangement">Quản lý CV</a>
                         </li>
 
                     </ul>
