--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
   <script src="./vendor/angular/angular.js"></script>
   <script src="./vendor/angular-resource/angular-resource.js"></script>
   <script src="./vendor/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="./vendor/jquery/dist/jquery.min.js"></script>
+  <!-- <script src="./vendor/jquery/dist/jquery.min.js"></script> -->
   <script src="./vendor/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="./vendor/angular-datatables.min.js"></script>
   <script src="./vendor/angular-sanitize/angular-sanitize.js"></script>
