--- a/client/company/index.html
+++ b/client/company/index.html
@@ -156,7 +156,7 @@
                             <a href="#newcv">CV Mới nhận</a>
                         </li>
                         <li>
-                            <a href="#cvmangement">Quản lý CV</a>
+                            <a href="#cvmangement">Quản lý theo bài đăng</a>
                         </li>
 
                     </ul>
