post - applyCV - modal

--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BKConnect </title>
   <!-- Bootstrap -->
-  <link href="./vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+  <link href="./vendor/bootstrap/dist/css/bootstrap.css" />
+
   <!-- <link href="views/styles.css" rel="stylesheet" /> -->
   <!-- <link href="./vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" /> -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./views/loading.css">
 </head>
 
 <body ng-app="app">
@@ -20,10 +22,12 @@
   <div ui-view class="view"></div>
 
   <!-- Library -->
+  <script src="./vendor/angular/angular.js"></script>
   <script src="./vendor/sweetaleart/sweetalert.min.js"></script>
   <script src="./vendor/jquery/dist/jquery.js"></script>
   <script src="./vendor/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="./vendor/angular/angular.js"></script>
+  <script src="./vendor/angular-animate/angular-animate.js"></script>
+  <script src="./vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="./vendor/angular-resource/angular-resource.js"></script>
   <script src="./vendor/angular-ui-router/release/angular-ui-router.js"></script>
   <!-- <script src="./vendor/jquery/dist/jquery.min.js"></script> -->
