--- a/client/company/index.html
+++ b/client/company/index.html
@@ -24,6 +24,9 @@
     <!-- pop-up-box-js-file -->
     <script src="company/views/js/jquery.magnific-popup.js" type="text/javascript"></script>
     <script type='text/javascript' src="vendor/angular/angular.js"></script>
+    <script type='text/javascript' src="vendor/angular-animate/angular-animate.js"></script>
+    <script type='text/javascript' src="vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+
     <script type='text/javascript' src="vendor/angular-resource/angular-resource.js"></script>
     <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <!-- END PLUGINS -->
@@ -94,7 +97,7 @@
     <ng-view ng-show="location.path() == '/login'"></ng-view>
     <div class="page-container" ng-hide="location.path() == '/login'">
         <!-- START PAGE SIDEBAR -->
-        <div class="page-sidebar" style="min-height: 678px;">
+        <div class="page-sidebar">
             <!-- START X-NAVIGATION -->
             <ul class="x-navigation">
                 <li class="xn-logo">
