--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,8 @@
   <base href="/">
   <div style="height: 80px"></div>
   <div ui-view ></div>
-
+  <header ng-include="'views/footer/footer.html'"></header>
+  
   <!-- Library -->
   <script src="./vendor/angular/angular.js"></script>
   <script src="./vendor/sweetaleart/sweetalert.min.js"></script>
